--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,17 @@ dependencies:
   flutter_bloc: ^8.1.2
   flutter_localizations:
     sdk: flutter
+  freezed_annotation: ^2.2.0
   intl: ^0.17.0
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   bloc_test: ^9.1.1
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
   mocktail: ^0.3.0
   very_good_analysis: ^4.0.0+1
 
