--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   freezed_annotation: ^2.2.0
+  get_it: ^7.2.0
   go_router: ^6.5.2
   intl: ^0.17.0
   json_annotation: ^4.8.0
