--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.1
+  cached_network_image: ^3.2.3
   dio: ^5.1.1
   flutter:
     sdk: flutter
@@ -17,6 +18,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   go_router: ^6.5.2
+  google_fonts: ^4.0.3
   intl: ^0.17.0
   json_annotation: ^4.8.0
 
@@ -33,3 +35,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - assets/images/dota_logo.png
