--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.1
   cached_network_image: ^3.2.3
+  cupertino_icons: ^1.0.5
   dio: ^5.1.1
   flutter:
     sdk: flutter
