--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^2.0.4
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   go_router: ^6.5.2
