--- a/build.yaml
+++ b/build.yaml
@@ -15,7 +15,7 @@ targets:
           create_per_field_to_json: false
           create_to_json: true
           disallow_unrecognized_keys: false
-          explicit_to_json: false
+          explicit_to_json: true
           field_rename: snake
           generic_argument_factories: false
           ignore_unannotated: false
