--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_hooks: ^0.18.6
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.4
@@ -34,9 +35,14 @@ dev_dependencies:
   mocktail: ^0.3.0
   very_good_analysis: ^4.0.0+1
 
+flutter_gen:
+  integrations:
+    flutter_svg: true
+
 flutter:
   uses-material-design: true
   generate: true
+
 
   assets:
     - assets/images/
