--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,19 @@
-include: package:very_good_analysis/analysis_options.3.1.0.yaml
+include: package:very_good_analysis/analysis_options.4.0.0.yaml
+
+analyzer:
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
+
+  errors:
+    missing_required_param: error
+    missing_return: error
+
+  exclude:
+    - [ lib/gen/** ]
+    - /*.g.dart
+
 linter:
   rules:
     public_member_api_docs: false
-    analyzer:
-  errors:
-    invalid_annotation_target: ignore
