--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dev_dependencies:
   freezed: ^2.3.2
   json_serializable: ^6.6.1
   mocktail: ^0.3.0
-  very_good_analysis: ^4.0.0+1
+  very_good_analysis: ^4.0.0
 
 flutter_gen:
   integrations:
